[gd_scene load_steps=10 format=3 uid="uid://dom8op4i0gm2a"]

[ext_resource type="Script" uid="uid://caoppar138q7o" path="res://scripts/managers/leaderboard_manager.gd" id="1_wgq7h"]
[ext_resource type="Texture2D" uid="uid://l2atiswygex0" path="res://transitions/bg.jpg" id="2_8lgqg"]
[ext_resource type="FontFile" uid="uid://bj8pwquunfxx8" path="res://Pizza Tower.ttf" id="3_8lgqg"]
[ext_resource type="Texture2D" uid="uid://cw64dvnkk3oqm" path="res://arrow.png" id="4_ldk02"]
[ext_resource type="Texture2D" uid="uid://bh3rusuqfqwpi" path="res://arrow2.png" id="6_mhq7p"]

[sub_resource type="Animation" id="Animation_6lrio"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("buttonback:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ldk02")]
}

[sub_resource type="Animation" id="Animation_jfen3"]
resource_name = "arrow_back"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("buttonback:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_ldk02"), ExtResource("6_mhq7p")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.96666664),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0, false, false],
"method": &"seek"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ldk02"]
_data = {
&"RESET": SubResource("Animation_6lrio"),
&"arrow_back": SubResource("Animation_jfen3")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6lrio"]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wgq7h")

[node name="Bg" type="Sprite2D" parent="."]
modulate = Color(0.23110586, 0.40934858, 0.4403412, 1)
z_index = -3
position = Vector2(540, 0)
texture = ExtResource("2_8lgqg")

[node name="Bg2" type="Sprite2D" parent="."]
modulate = Color(0.23110586, 0.40934858, 0.4403412, 1)
z_index = -3
position = Vector2(540, -2156)
texture = ExtResource("2_8lgqg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="LeaderboardName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8lgqg")
theme_override_font_sizes/font_size = 102
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ldk02")
}

[node name="buttonback" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.027777778
anchor_top = 0.027777778
anchor_right = 0.24245667
anchor_bottom = 0.1388889
pivot_offset = Vector2(110, 50)
theme_override_fonts/font = ExtResource("3_8lgqg")
theme_override_font_sizes/font_size = 64
theme_override_icons/icon = ExtResource("4_ldk02")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6lrio")
icon = ExtResource("4_ldk02")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="buttonback" to="." method="_on_buttonback_mouse_entered"]
[connection signal="mouse_exited" from="buttonback" to="." method="_on_buttonback_mouse_exited"]
[connection signal="pressed" from="buttonback" to="." method="_on_buttonback_pressed"]
